	  anywhere after the input overhaul. (DLR)
  do_verbatim_input()
	- Use size_t's instead of ints for the get_verbatim_kbinput()
	  call and the loop that ungetch()es its returned int*,
	  respectively. (DLR)
  main()
	- Don't open the first file in quiet mode, since if we do, an
	  error message won't be shown if it's unreadable. (DLR; found
	  by Jaap Eldering)
- nano.h:
	- Since REGEXP_COMPILED is only used in search.c, convert it
	  from a flag to a static int there. (DLR)
- proto.h:
	- Remove unused xpt() and add_marked_sameline() prototypes.
	  (DLR)
- rcfile.c:
	- Move "rebinddelete" up in the list of options so that the list
	  is in alphabetical order. (DLR)
- search.c:
  regexp_init()
	- Overhaul for efficiency.  Also check if regcomp() failed, and
	  if so, display "Bad regex" message on the statusbar, so that
	  we don't have to display it separately after every call to
	  this function. (David Benbennick)
  search_init()
	- Only check whether USE_REGEXP is set, and hence whether or not
	  to display "[Regexp]" on the search prompt, if HAVE_REGEX_H is
	  defined. (DLR)
  not_found_msg()
	- Convert to properly handle strings generated by
	  display_string() that have been used in the search prompt
	  since 1.3.0. (David Benbennick)
- utils.c:
  is_blank_char()
	- Add new function is_blank_char() as an isblank() equivalent,
	  since isblank() is a GNU extension. (DLR)
  nstricmp(), nstrnicmp()
	- Add extra blank lines for greater readability, and remove
	  unneeded test for n's being less than zero (since it's already
	  been tested for being greater than zero or equal to zero at
	  that point) from nstrnicmp(). (DLR)
  stristr()
	- Rename to nstristr() to avoid a potential conflict with an
	  existing stristr() function, and move up to just after
	  nstrnicmp(). (DLR)  David Benbennick: Tweak for efficiency.
	- Include and use only when strcasestr() is unavailable, since
	  strcasestr() is a GNU extension. (DLR)
- winio.c:
  get_verbatim_kbinput()